# cookiecutter-python-django

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  make.bat  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: test-bake.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_cookies.py  test_post_gen_project.py  test_pre_gen_project.py
{{cookiecutter.git_repo_name}}/: .coveragerc  .readthedocs.yaml  Dockerfile  Makefile  README.md  app_run.py  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt
{{cookiecutter.git_repo_name}}/.github/ISSUE_TEMPLATE/: config.yml
{{cookiecutter.git_repo_name}}/.github/workflows/: publish-to-pypi.yml  test-coverage-lint.yml
{{cookiecutter.git_repo_name}}/container/: README.md
{{cookiecutter.git_repo_name}}/containers/: Containerfile  Dockerfile  Makefile  make.bat
{{cookiecutter.git_repo_name}}/docs/: conf.py  index.rst
{{cookiecutter.git_repo_name}}/docs/_ext/: jinja2_rendering.py
{{cookiecutter.git_repo_name}}/modules/: __init__.py  version.py
{{cookiecutter.git_repo_name}}/modules/routers/: __init__.py
{{cookiecutter.git_repo_name}}/modules/utils/: schemas.py
{{cookiecutter.git_repo_name}}/scripts/: README.md
{{cookiecutter.git_repo_name}}/tests/: conftest.py
{{cookiecutter.git_repo_name}}/tests/data/: .test-env  README.md
{{cookiecutter.git_repo_name}}/{{cookiecutter.__app_name}}/: __init__.py  version.py  web_app.py  {{cookiecutter.__app_name}}_cli.py
{{cookiecutter.git_repo_name}}/{{cookiecutter.__app_name}}/routers/: example.py  hello_world.py
{{cookiecutter.git_repo_name}}/{{cookiecutter.__app_name}}/static/: README.md
{{cookiecutter.git_repo_name}}/{{cookiecutter.__app_name}}/templates/: README.md  base.jinja2  index.jinja2
{{cookiecutter.git_repo_name}}/{{cookiecutter.__app_name}}/utils/: __init__.py
{{cookiecutter.git_repo_name}}/{{cookiecutter.__project_name}}/: version.py
